force-app/main/default/objects/ARF_Payment_Plan__c/ARF_Payment_Plan__c.object-meta.xml
<CustomObject>
    <label>Payment Plan</label>
    <nameField><label>Plan Number</label><displayFormat>PLN-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>