force-app/main/default/objects/ARF_Payment_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Plans</relationshipName>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>