force-app/main/default/objects/ARF_Payment_Plan__c/fields/AI_Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation_Reason__c</fullName>
    <label>AI Recommendation Reason</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>