force-app/main/default/objects/ARF_Payment_Plan__c/fields/AI_Recommended__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommended__c</fullName>
    <label>AI Recommended</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>