force-app/main/default/objects/ARF_Payment_Plan__c/fields/Auto_Pay_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Enabled__c</fullName>
    <label>Auto Pay Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>