force-app/main/default/objects/ARF_Payment_Plan__c/fields/Created_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Customer__c</fullName>
    <label>Created By Customer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>