force-app/main/default/objects/ARF_Payment_Plan__c/fields/Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Amount__c</fullName>
    <label>Down Payment Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>