force-app/main/default/objects/ARF_Payment_Plan__c/fields/Down_Payment_Paid__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Paid__c</fullName>
    <label>Down Payment Paid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>