force-app/main/default/objects/ARF_Payment_Plan__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value>
            <value><fullName>Bi_Weekly</fullName><default>false</default><label>Bi-Weekly</label></value>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>