force-app/main/default/objects/ARF_Payment_Plan__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>