force-app/main/default/objects/ARF_Payment_Plan__c/fields/Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee__c</fullName>
    <label>Late Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>