force-app/main/default/objects/ARF_Payment_Plan__c/fields/Max_Missed_Before_Default__c.field-meta.xml
<CustomField>
    <fullName>Max_Missed_Before_Default__c</fullName>
    <label>Max Missed Before Default</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>