force-app/main/default/objects/ARF_Payment_Plan__c/fields/Missed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Missed_Payments__c</fullName>
    <label>Missed Payments</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>