force-app/main/default/objects/ARF_Payment_Plan__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>