force-app/main/default/objects/ARF_Payment_Plan__c/fields/Number_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Installments__c</fullName>
    <label>Number Of Installments</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>