force-app/main/default/objects/ARF_Payment_Plan__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Lookup</type>
    <referenceTo>ARF_Account_Payment_Method__c</referenceTo>
    <relationshipName>Payment_Plans</relationshipName>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>