force-app/main/default/objects/ARF_Payment_Plan__c/fields/Terms_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Accepted_Date__c</fullName>
    <label>Terms Accepted Date</label>
    <type>DateTime</type>
</CustomField>